pkg/kgateway/setup/testdata/standard/extproc-backend-extref.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http-gw-for-test
  namespace: gwtest
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      hostname: "example.com"
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: gwtest
  labels:
    app: reviews
    service: reviews
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: reviews
---
apiVersion: v1
kind: Service
metadata:
  name: extproc
  namespace: gwtest
spec:
  ports:
  - port: 9091
    protocol: TCP
    appProtocol: kubernetes.io/h2c
    targetPort: 9091
  selector:
    app: extproc
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: extproc-slice
  namespace: gwtest
  labels:
    kubernetes.io/service-name: extproc
    app: extproc
addressType: IPv4
endpoints:
  - addresses:
      - 10.244.2.14
    conditions:
      ready: true
    nodeName: worker
    targetRef:
      kind: Pod
      name: extproc
      namespace: gwtest
ports:
  - name: grpc
    port: 9091
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ratings
  namespace: gwtest
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ratings
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: ratings-slice
  namespace: gwtest
  labels:
    kubernetes.io/service-name: ratings
    app: ratings
addressType: IPv4
endpoints:
  - addresses:
      - 10.244.1.12
    conditions:
      ready: true
    nodeName: worker
    targetRef:
      kind: Pod
      name: ratings-1
      namespace: gwtest
ports:
  - name: http
    port: 8080
    protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: reviews-slice
  namespace: gwtest
  labels:
    kubernetes.io/service-name: reviews
    app: reviews
    service: reviews
addressType: IPv4
endpoints:
  - addresses:
      - 10.244.1.11
    conditions:
      ready: true
    nodeName: worker
    targetRef:
      kind: Pod
      name: reviews-1
      namespace: gwtest
  - addresses:
      - 10.244.2.14
    conditions:
      ready: true
    nodeName: worker
    targetRef:
      kind: Pod
      name: extproc
      namespace: gwtest
ports:
  - name: http
    port: 8080
    protocol: TCP
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: extproc-ext
  namespace: gwtest
spec:
  type: ExtProc
  extProc:
    grpcService:
      backendRef:
        name: extproc
        port: 9091
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-test
  namespace: gwtest
spec:
  extProc:
    extensionRef:
      name: extproc-ext
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route
  namespace: gwtest
spec:
  parentRefs:
    - name: http-gw-for-test
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
      - name: reviews
        port: 8080
        filters:
          - type: ExtensionRef
            extensionRef:
              group: gateway.kgateway.dev
              kind: TrafficPolicy
              name: route-test
      - name: ratings
        port: 8080
